[package]
name = "rust_hello_world"
version = "0.1.0"
authors = ["mochi-sann <moyurusuto@gmail.com>"]
edition = "2018"

[package.metadata.cargo-compete]
config = "compete.toml"

[package.metadata.cargo-compete.bin]
rust_hello_world = {name = "rust_hello_world-rust_hello_world",problem = "https://atcoder.jp/contests/rust_hello_world/<FIXME: screen name of the problem>"}

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "rust_hello_world-rust_hello_world"
path = "./src/bin/rust_hello_world.rs"
